# deap-quant

./: .gitignore  README.md  bt_algos_extend.py  config.py  df-merge.py  df_merge.py  fundamental-main.py  list_funcs.py  main.py  myakshare.py  myconfig.py  myredis.py  pyproject.toml  redis_export.py  requirements.txt  set_funcs_except.py  test.py  代码说明.md
alpha/: __init__.py  deap_main.py  deap_patch.py  init_pset.py
data/instruments/: A股大小盘+美股+黄金+商品.txt  A股大小盘+美股+黄金.txt  A股宽基  低波动与成长性.txt  全球大类资产.txt  创业板+红利低波+纳指+黄金.txt  大类资产+优质行业多ETF  风险平价——资产  风险平价——资产——红利低波
datafeed/: __init__.py  dataloader.py  expr.py  expr_not_use_in_ga.py  expr_talib.py
datafeed/expr_functions/: __init__.py  expr_not_use_in_ga.py  expr_unary_rolling.py
factor/: alpha158.py  alpha_worldquant101.py
fin-data/: stocks_financial_data.db
financedata/: stocks_financial_data.db
funcs/: funcs_except.py  list_funcs.py  set_funcs_except.py
myakshare/: main.py
myconfig/: __init__.py
myredis/: __init__.py  myredis.py  redis_key.py
redis/: myredis.py  redis_key.py
