[project]
name = "mydeap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "akshare>=1.17.39",
    "bt>=1.1.2",
    "deap>=1.4.3",
    "loguru>=0.7.3",
    "pip>=25.2",
    "python-dotenv>=1.1.1",
    "redis>=6.4.0",
    "ta-lib>=0.6.4",
    "tensorboardx>=2.6.4",
]
